# LionsFinancial

./: .gitignore  README.md  main.py  pyproject.toml
helpers/: __init__.py  util.py
