[project]
name = "lionsfinancial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
